Add CSS animation to constuction page.

--- a/css/main.css
+++ b/css/main.css
@@ -124,6 +124,27 @@ svg {
     width: 40%;
 }
 
+[id^="cog-"]  {
+    animation-name: rotation;
+    animation-duration: 8s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+    transform-origin: 50% 50%;
+}
+
+@keyframes rotation {
+    0% { transform: rotate(0deg);}
+    12.5% {transform: rotate(45deg);}
+    25% {transform: rotate(90deg);}
+    37.5% {transform: rotate(135deg);}
+    50% {transform: rotate(180deg);}
+    62.5% {transform: rotate(225deg);}
+    75% {transform: rotate(270deg);}
+    87.5% {transform: rotate(315deg);}
+    100% {transform: rotate(360deg);}
+ }
+
+
 p {
     font-size: 2rem;
     font-weight: bold;
