Add favicon cross-browser/platform support

--- a/css/main.css
+++ b/css/main.css
@@ -139,7 +139,15 @@ p {
     font-size: 2rem;
     font-weight: bold;
 }
+/*
+#T {
+    transition: 2s;
+}
 
+#T:hover {
+    transform: 
+}
+*/
 /*
 
 .main-nav {
