--- a/_assets/stylesheets/_components.site-nav.scss
+++ b/_assets/stylesheets/_components.site-nav.scss
@@ -10,13 +10,15 @@
 // nav - a, ul, li
 
 .site {
+
+    //poor naming for this one..
     &__wrapper {
         // segment for fixing the nav bar to the top of the viewport
         position: fixed;
         left: 0;
         top: 0;
         width: 100%;
-        margin-top: 10px;
+        margin-top: 20px;
         height: auto;
         z-index: 100;
     }
@@ -102,6 +104,7 @@
 .wrapper {
     //needs to be inline-block; inline does not allow for text-align to center for some reason..
     display: inline-block;
+    margin: 0 auto;
 
 }
 
