--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,7 @@
 {% include header.html %}
 
-<main class="page__body">
-    <div class="wrapper">
+<main>
     {{ content }}
-    </div>
 </main>
 
 {% include footer.html %}
