--- a/_assets/stylesheets/_base.page.scss
+++ b/_assets/stylesheets/_base.page.scss
@@ -9,5 +9,8 @@ html {
 }
 
 main {
-    margin: 0 auto;
+    margin-top: 150px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 0;
 }
