--- a/_assets/stylesheets/_components.page-body.scss
+++ b/_assets/stylesheets/_components.page-body.scss
@@ -3,24 +3,73 @@
 //
 
 .page {
-    &__body {
-        margin-top: 150px;
         width: 80%;
-        text-align: center;
-    }
+        max-width: 720px;
+        margin: 0 auto;
     
     &__header {
+        text-align: center;
         margin-bottom: 10px;
+    }
+
+    &__content {
+        text-align: center;
     }
 }
 
 .home {
     &__cog {
+
+/*
+        // removed :before
+       // content: "";
+       // position: absolute;
+       // z-index: -1;
+       // top: 50%;
+       // transform: translate(0, -50%);
         background-image: url('/uploads/TimolawlBGCog.svg');
         background-repeat: no-repeat;
         background-position: center;
         background-size: 80%;
         padding: 50px 0;
-    }
+        animation-name: rotation;
+        animation-duration: 8s;
+        animation-timing-function: ease;
+        animation-iteration-count: infinite;
+        transform-origin: 50% 50%;
 
+     //   opacity: 0.4;
+*/
+    }
 }
+
+.cog {
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    top: -48px;
+
+    animation-name: rotation;
+    animation-duration: 1s;
+    animation-timing-function: ease;
+    animation-iteration-count: infinite;
+    transform-origin: 50% 50%;
+
+
+    &__clear {
+        background: #fff;
+    }
+}
+
+@keyframes rotation {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(45deg); }
+}
+
+.about {
+    &__content {
+        text-indent: 20px;
+        text-align: justify;
+    }
+}
+
