Update About page; general clean/refactor code

--- a/_assets/stylesheets/_base.page.scss
+++ b/_assets/stylesheets/_base.page.scss
@@ -8,6 +8,8 @@ html {
     width: 100%;
 }
 
+
+//sets the content initial position below the nav bar (can still scroll through).
 main {
     margin-top: 150px;
     margin-left: auto;
