--- a/_assets/stylesheets/_settings.colors.scss
+++ b/_assets/stylesheets/_settings.colors.scss
@@ -3,5 +3,9 @@
 //
 
 $primary-color: #69e3ff;
+$primary-light: #a5eeff;
+$primary-dark: #357280;
+
 $secondary-color: #414042;
- 
+$secondary-light: #8d8c8e;
+$secondary-dark: #212021;
