--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,7 +53,7 @@
                 </svg>
             </a>
 
-            <div class="wrapper">
+            <div class="wrap">
                 {% include nav.html %}
             </div>
 
