--- a/_assets/stylesheets/_base.links.scss
+++ b/_assets/stylesheets/_base.links.scss
@@ -4,12 +4,12 @@
 
 a {
     &:link {
-        color: #000;
-      //  color: #8d8c8e;
+     //   color: #000;
+        color: #8d8c8e;
     }
 
     &:visited {
-        color: #000;
+        color: #8d8c8e;
     }
     
     &:hover {
