--- a/_assets/stylesheets/_components.post.scss
+++ b/_assets/stylesheets/_components.post.scss
@@ -1,12 +1,6 @@
 //
-// post classes
+// post classes specific to individual posts
 //
-
-.posts {
-    &__list {
-    list-style: none;
-    }
-}
 
 .post {
 // this section is for actual post customization
@@ -20,17 +14,7 @@
     }
 
     &__content {
-        text-indent: 20px;
+        text-indent: 1em;
         text-align: justify;
-    }
-
-// this is for the post listing
-    &__title {
-        display: block;
-    }
-    &__date {
-        display: block;
-        color: #8d8c8e;
-        margin-bottom: 10px;
     }
 }
