--- a/css/main.scss
+++ b/css/main.scss
@@ -15,6 +15,8 @@
 @import "_base.links";
 @import "_base.type";
 
+@import "_objects.wrappers";
+
 @import "_components.iconic";
 @import "_components.site-nav";
 @import "_components.page-head";
