--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -15,8 +15,5 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
         <script src="js/plugins.js"></script>
         -->
-<!--
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+        <script src="{{ '/js/vendor/date.js' | prepend: site.baseurl }}"></script>
         <script src="{{ '/js/main.js' | prepend: site.baseurl }}"></script>
-
-        -->
