--- a/_assets/stylesheets/_components.site-nav.scss
+++ b/_assets/stylesheets/_components.site-nav.scss
@@ -107,12 +107,12 @@
 ***********************************************************
 */
 
-.logo--hover {
+.logo--highlight {
     display: none;
 }
 
-.logo--status:hover .logo--hover,
-.logo--status:active .logo--hover {
+.logo--status:hover .logo--highlight,
+.logo--status:active .logo--highlight {
     display: block;
 }
 
