--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -14,6 +14,5 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/snap.svg/0.4.1/snap.svg-min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
         <script src="js/plugins.js"></script>
+        <script src='js/main.js'></script>
         -->
-        <script src="{{ '/js/vendor/date.js' | prepend: site.baseurl }}"></script>
-        <script src="{{ '/js/main.js' | prepend: site.baseurl }}"></script>
