--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
 
     <!-- importing modernizer won't work since the folder is in a folder jekyll won't build -->
     <!-- <script src="js/vendor/modernizr-2.8.3.min.js"></script> -->
-
+    <script src="{{ '/js/vendor/modernizr-custom.js' | prepend: site.baseurl }}"></script>
     <script src="{{ '/js/script.js' | prepend: site.baseurl }}"></script>
 
 
