Implement responsive web elements. Hamburgers yum.

--- a/_assets/stylesheets/_components.js-items.scss
+++ b/_assets/stylesheets/_components.js-items.scss
@@ -3,7 +3,7 @@
     padding: 10px 20px;
     margin: 100px auto 0;
     background-color: #464a4f;
-    max-width: 500px;
+    max-width: 520px;
   //  text-align: left;
   //  width: -webkit-fit-content;
   //  width: -moz-fit-content;
@@ -36,7 +36,7 @@
 }
 
 .time-since-commit {
-    display: inline-block;;
+    display: inline-block;
     font-size: 0.7rem;
     color: #8d8c8e;
 }
