--- a/_includes/header.html
+++ b/_includes/header.html
@@ -146,7 +146,13 @@
 
             </a>
 
-            <div class="wrap">
+            <!-- hamburger menu goes here -->
+            <div class="hamburger-wrapper">
+                <span class="hamburger"></span>
+            </div>
+
+
+            <div class="nav-wrapper">
                 {% include nav.html %}
             </div>
 
