--- a/_assets/stylesheets/_components.page-body.scss
+++ b/_assets/stylesheets/_components.page-body.scss
@@ -5,10 +5,17 @@
 
 // customization of layout: page
 .page {
-    // width 80% ensures that the content has room on the left and right
+
+    margin: 0 auto;
+
+    @media (max-width: 720px) {
+        width: 90%;
+    }
+
+    @media (min-width: 721px) {
         width: 80%;
         max-width: 720px;
-        margin: 0 auto;
+    }
 
     &__header {
         text-align: center;
@@ -28,13 +35,19 @@
     &__content {
     }
 }
-
+/*
+.WIP {
+    font-family: 'Italianno', cursive;
+    font-size: 2em;
+}
+*/
 // the cog svg in the home page
 .cog {
     position: absolute;
     width: 120px;
     height: 120px;
     top: -48px;
+    z-index: -1;
 
     animation-name: rotation;
     animation-duration: 1s;
@@ -45,6 +58,7 @@
 // returns a white background between text and cog for text clarity.
     &__clear {
         background: #fff;
+        //might as well use it to add some spacing between the other lines.
     }
 }
 
