Minor layout fixes; folder restructuring.

--- a/css/main.scss
+++ b/css/main.scss
@@ -27,7 +27,7 @@
 
 @import "_components.iconic";
 @import "_components.state";
-@import "_components.js-items";
+@import "_components.module.git-message";
 @import "_components.site-nav";
 @import "_components.page-head";
 @import "_components.page-body";
