Minor layout fixes and code cleanup.

--- a/_assets/stylesheets/_components.module.git-message.scss
+++ b/_assets/stylesheets/_components.module.git-message.scss
@@ -5,9 +5,9 @@
     background-color: #464a4f;
     max-width: 530px;
   //  text-align: left;
-  //  width: -webkit-fit-content;
-  //  width: -moz-fit-content;
-  //  width: fit-content;
+    width: -webkit-fit-content;
+    width: -moz-fit-content;
+    width: fit-content;
 }
 
 .discord-image-wrapper {
