--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
   <footer>
-    <div>
+    <div class="footer">
+        <span class="copyright">&copy; {{ site.time | date: '%Y' }} Tim Chiang, unless otherwise noted.</span>
     </div>
   </footer>
   {% include scripts.html %}
