--- a/_assets/stylesheets/_objects.wrappers.scss
+++ b/_assets/stylesheets/_objects.wrappers.scss
@@ -8,7 +8,7 @@
     margin: 0 auto;
 }
 
-.fill {
+.fill { // used between home paragraph and commit module
     height: 4em;
     width: auto;
     margin: 0 auto;
