--- a/_assets/stylesheets/_settings.global.scss
+++ b/_assets/stylesheets/_settings.global.scss
@@ -2,5 +2,7 @@
 // Global variables (excluding color)
 //
 
-$font-stack-header: 'Montserrat-Semibold', 'Montserrat', Helvetica, sans-serif;
+// Removed 'Montserrat-Semibold' from font-stack-header, as I haven't been able to get it to load on live servers.
+
+$font-stack-header: 'Montserrat', Helvetica, sans-serif;
 $font-stack-body: 'Istok Web', Helvetica, sans-serif;
